--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
   <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="visual_calculator">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
@@ -33,6 +33,21 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script src='https://unpkg.com/tesseract.js@v4.0.2/dist/tesseract.min.js'></script>
+  <script>
+    async function _extractText(imagePath , mapData){
+      var worker = await Tesseract.createWorker();
+      await worker.loadLanguage(mapData.language)
+      await worker.initialize(mapData.language)
+      await worker.setParameters(mapData.args)
+      var rtn = await worker.recognize(imagePath, {}, worker.id);
+      await worker.terminate();
+      if(mapData.args["tessjs_create_hocr"]){
+        return rtn.data.hocr;
+      }
+      return rtn.data.text;
+    }
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
