--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -27,22 +28,23 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>visual_calculator</title>
+  <title>Visual Calculator</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <script src='https://unpkg.com/tesseract.js@v4.0.2/dist/tesseract.min.js'></script>
   <script>
-    async function _extractText(imagePath , mapData){
+    async function _extractText(imagePath, mapData) {
       var worker = await Tesseract.createWorker();
       await worker.loadLanguage(mapData.language)
       await worker.initialize(mapData.language)
       await worker.setParameters(mapData.args)
       var rtn = await worker.recognize(imagePath, {}, worker.id);
       await worker.terminate();
-      if(mapData.args["tessjs_create_hocr"]){
+      if (mapData.args["tessjs_create_hocr"]) {
         return rtn.data.hocr;
       }
       return rtn.data.text;
@@ -50,4 +52,5 @@
   </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
 </html>
